# flask-postgresql-audit

./: CHANGES.md  README.md  pyproject.toml  requirements.test  tox.ini
.github/workflows/: lint.yml  test.yml
docs/: conf.py
flask_postgresql_audit/: __init__.py  base.py  core.py  models.py
flask_postgresql_audit/alembic/: __init__.py  entities.py  setup.py
flask_postgresql_audit/templates/: create_activity.sql  get_pk_values.sql  get_table_relid.sql  jsonb_subtract.sql
tests/: conftest.py  test_custom_schema.py  test_flask_integration.py  test_json_functions.py  test_migration_functions.py  test_sqlalchemy_integration.py
