

[project]
name = "flask-postgresql_audit"
dynamic = ["version"]
description = "Versioning and auditing extension for PostgreSQL and SQLAlchemy."
readme = "README.rst"
license = "bsd-2-clause"
requires-python = ">=3.11"
authors = [
    { name = "Konsta Vesterinen", email = "konsta@fastmonkeys.com" },
    { name = "Refian Muhammad", email = "higamigu@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "alembic>=1.17.0",
    "alembic-utils>=0.8.8",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
]

[project.urls]
Homepage = "https://github.com/higamigu/flask-postgresql-audit"

[project.optional-dependencies]
flask-login = ["flask-login>=0.6.3"]
flask-jwt-extended = ["flask-jwt-extended>=4.7.1"]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.14.1", "setuptools>=80.9.0", "tox>=4.31.0"]

[tool.hatch.version]
path = "flask_postgresql_audit/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/CHANGES.md", "/flask_postgresql_audit", "/tests"]

[tool.hatch.build.targets.wheel]
include = ["/flask_postgresql_audit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
